cmake_minimum_required(VERSION 3.20)
project(CppTest CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 11)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/Zc:strictStrings->")
endif()

add_subdirectory ("src/common")
add_subdirectory ("src/SingleFileCpp/codevs")
add_subdirectory ("src/SingleFileCpp/hwoj")
add_subdirectory ("src/SingleFileCpp/luogu")
add_subdirectory ("src/SingleFileCpp/nowcoder")
add_subdirectory ("src/SingleFileCpp/openjudge")
add_subdirectory ("src/SingleFileCpp/others")
add_subdirectory ("src/SingleFileCpp/VerifyCppGrammar")
add_subdirectory ("src/CTest")
add_subdirectory("src/SumCode")
add_subdirectory("src/IdiomSolitaire")
add_subdirectory("src/SingleFileCppWindows")
add_subdirectory("src/LCTest")
add_subdirectory("src/ImageViewer")

# 如果支持，请为 MSVC 编译器启用热重载。
if (POLICY CMP0141)
    cmake_policy(SET CMP0141 NEW)
    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    add_subdirectory ("msvc/cmdplus")
    add_subdirectory ("msvc/WindowTest")
    add_subdirectory ("msvc/ConsoleTest")
    add_subdirectory ("msvc/LeafCore")
    add_subdirectory ("msvc/SimpleMFC")
    add_subdirectory ("msvc/MFCTest")
    add_subdirectory ("msvc/SchoolMIS")
    add_subdirectory ("msvc/SimpleManageSystem")
    add_subdirectory ("msvc/GlogTest")
    add_subdirectory ("msvc/Books")
    add_subdirectory ("msvc/OpenGL")
    add_subdirectory ("msvc/OpenSSLTest")
    add_subdirectory ("msvc/OJ")
    add_subdirectory ("msvc/BlueToothExc")
    add_subdirectory ("msvc/BthCxn")
    add_subdirectory ("msvc/Libjiangxin")
    add_subdirectory ("msvc/LibTest")
    add_subdirectory ("msvc/Elevator")
endif()
