cmake_minimum_required(VERSION 3.20)
project(CppTest CXX C)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_C_STANDARD 11)

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb ")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
elseif ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    add_definitions(-D_CRT_SECURE_NO_WARNINGS)
    add_compile_options("$<$<CXX_COMPILER_ID:MSVC>:/Zc:strictStrings->")
endif()

add_subdirectory ("src/common")
add_subdirectory ("src/SingleFileCpp/codevs")
add_subdirectory ("src/SingleFileCpp/hwoj")
add_subdirectory ("src/SingleFileCpp/luogu")
add_subdirectory ("src/SingleFileCpp/nowcoder")
add_subdirectory ("src/SingleFileCpp/openjudge")
add_subdirectory ("src/SingleFileCpp/others")
add_subdirectory ("src/SingleFileCpp/VerifyCppGrammar")
add_subdirectory ("src/CTest")
add_subdirectory("src/SumCode")
add_subdirectory("src/IdiomSolitaire")
add_subdirectory("src/SingleFileCppWindows")
add_subdirectory("src/LCTest")
add_subdirectory("src/ImageViewer")
if (NOT "${MINGW}")
    add_subdirectory("src/OJ")
    add_subdirectory("src/GlogTest")
    add_subdirectory("src/OpenGL")
    add_subdirectory("src/OpenSSLTest")
ENDIF ()
add_subdirectory("msvc")
