# 如果支持，请为 MSVC 编译器启用热重载。
if (POLICY CMP0141)
    cmake_policy(SET CMP0141 NEW)
    set(CMAKE_MSVC_DEBUG_INFORMATION_FORMAT "$<IF:$<AND:$<C_COMPILER_ID:MSVC>,$<CXX_COMPILER_ID:MSVC>>,$<$<CONFIG:Debug,RelWithDebInfo>:EditAndContinue>,$<$<CONFIG:Debug,RelWithDebInfo>:ProgramDatabase>>")
endif()

if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
    add_subdirectory ("cmdplus")
    add_subdirectory ("WindowTest")
    add_subdirectory ("ConsoleTest")
    add_subdirectory ("LeafCore")
    add_subdirectory ("SimpleMFC")
    add_subdirectory ("MFCTest")
    add_subdirectory ("SchoolMIS")
    add_subdirectory ("SimpleManageSystem")
    add_subdirectory ("GlogTest")
    add_subdirectory ("Books")
    add_subdirectory ("OpenGL")
    add_subdirectory ("OpenSSLTest")
    add_subdirectory ("BlueToothExc")
    add_subdirectory ("BthCxn")
    add_subdirectory ("Libjiangxin")
    add_subdirectory ("LibTest")
    add_subdirectory ("Elevator")
endif()