IF (CMAKE_SYSTEM_NAME MATCHES "Linux")
    file(GLOB sources "${CMAKE_CURRENT_SOURCE_DIR}/*.c")
    foreach (source IN LISTS sources)
        get_filename_component(program ${source} NAME_WE)
        add_executable(${program} ${source})
        target_link_libraries(${program} m)
    endforeach (source)
ELSE ()
    MESSAGE(STATUS "other platform: ${CMAKE_SYSTEM_NAME}")
ENDIF (CMAKE_SYSTEM_NAME MATCHES "Linux")